# p3at_nav

./: .gitignore  .vim.custom  CMakeLists.txt  package.xml
config/: cascade.xml  cascade2.xml  cascade3.xml  cascade4.xml  cascade5.xml  cascade6.xml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.yaml
doc/nav/src/: .main.tex.swp  main.tex
doc/rml/: Makefile
doc/rml/src/: main.tex
launch/: consenso.launch  machine.launch  map_test.launch  move_base.launch  p3at_amcl.launch  pioneer_cmd.launch  pionneer_configuration.launch  turtlesim_mb.launch
map/: auditorio1.yaml  corredor.pgm  corredor.yaml  corredor2.pgm  corredor2.yaml  husky_map.pgm  husky_map.yaml  sala.pgm  sala.yaml
src/: atratores.cpp  consenso.cpp  consenso1.cpp  consenso2.cpp  consenso3.cpp  consenso_server.cpp  cv_bridge2.cpp  listener.cpp  particle_filter.cpp  qlearning.cpp  reward.cpp  rl.cpp  robot_atrator.cpp  samson1.cpp  samson2.cpp  talker.cpp  turtle_tf_broadcaster.cpp
worlds/: .robots.world.swp  robots.world
